Complete README.md rewrite with comprehensive documentation
Co-authored-by: imperfectperson-max <125220547+imperfectperson-max@users.noreply.github.com>