@@ -1,234 +1,289 @@
-# 🍎 VeriCrop - Supply Chain Intelligence Platform
+# VeriCrop Mini-Project
 
-![Version](https://img.shields.io/badge/version-2.0.0-blue.svg)
+> AI-Powered Agricultural Supply Chain Management with Quality Control and Blockchain Transparency
+
 ![Java](https://img.shields.io/badge/Java-17-orange.svg)
 ![Python](https://img.shields.io/badge/Python-3.11-green.svg)
-![AI Enabled](https://img.shields.io/badge/AI-Enabled-red.svg)
-![Blockchain](https://img.shields.io/badge/Blockchain-Secure-yellow.svg)
-![License](https://img.shields.io/badge/license-TBD-lightgrey.svg)
+![Kafka](https://img.shields.io/badge/Kafka-3.4.0-black.svg)
 ![Build](https://img.shields.io/badge/build-passing-brightgreen.svg)
 
-> End-to-End Supply Chain Management with AI-Powered Quality Control and Blockchain Transparency
+## Table of Contents
 
-## 📑 Table of Contents
-
-- [Background and Motivation](#background-and-motivation)
-- [Key Features](#key-features)
-- [Technologies and Dependencies](#technologies-and-dependencies)
-- [System Architecture](#system-architecture)
-- [Installation](#installation)
-- [Usage](#usage)
-- [Running Tests](#running-tests)
-- [Core Components](#core-components)
-- [API Endpoints](#api-endpoints)
-- [Machine Learning Model](#machine-learning-model)
-- [Blockchain Implementation](#blockchain-implementation)
-- [Database Schema](#database-schema)
-- [Deployment](#deployment)
+- [Project Summary](#project-summary)
+- [Architecture](#architecture)
+- [Components](#components)
+- [Quickstart](#quickstart)
+- [Local Development](#local-development)
+- [Configuration](#configuration)
+- [ML Service Contract](#ml-service-contract)
+- [Testing](#testing)
 - [Contributing](#contributing)
-- [Code of Conduct](#code-of-conduct)
-- [License](#license)
-- [Maintainers and Contact](#maintainers-and-contact)
-- [Acknowledgements](#acknowledgements)
+- [Troubleshooting](#troubleshooting)
 
-## 🌱 Background and Motivation
+## Project Summary
 
-VeriCrop addresses critical challenges in agricultural supply chain management by combining artificial intelligence, blockchain technology, and real-time monitoring to ensure food quality and transparency. The platform empowers farmers, logistics providers, and consumers with tools to track produce quality from farm to table, reducing food waste and building trust in the supply chain.
+VeriCrop is a comprehensive mini-project that demonstrates modern supply chain management for agricultural products. The platform combines:
 
-The project was developed as a comprehensive mini-project demonstrating the integration of modern technologies including:
-- AI-powered quality assessment for agricultural products
-- Blockchain-based immutable record keeping
-- Real-time IoT monitoring and analytics
-- Multi-stakeholder dashboard interfaces
-## 🎯 Key Features
+- **AI-Powered Quality Assessment**: Machine learning service for fruit quality classification
+- **Blockchain Transparency**: Immutable ledger for supply chain tracking
+- **Real-time Messaging**: Kafka-based event streaming for supply chain events
+- **Interactive GUI**: JavaFX desktop application for farm management, logistics, consumer verification, and analytics
+- **Workflow Orchestration**: Apache Airflow for automated quality evaluation pipelines
 
-- 🤖 **AI Quality Classification** - 99.06% accurate fruit quality detection using ResNet18
-- ⛓️ **Blockchain Security** - Immutable supply chain records with SHA-256 hashing
-- 📊 **Four Interactive Dashboards** - Farm, Logistics, Consumer, and Analytics interfaces
-- 🌡️ **Real-time Monitoring** - Temperature, humidity, and quality tracking throughout the supply chain
-- 📱 **Consumer Verification** - QR code scanning for instant product authenticity verification
-- 📈 **Advanced Analytics** - Performance metrics, KPI monitoring, and predictive insights
-- 🔄 **Complete Traceability** - End-to-end tracking from producer to consumer
-- 🚨 **Automated Alerts** - Temperature breach notifications and quality degradation warnings
+### Goals
 
-## 💻 Technologies and Dependencies
+- Ensure food quality and safety through AI-powered classification
+- Provide end-to-end traceability from farm to consumer
+- Enable real-time monitoring of supply chain conditions
+- Demonstrate integration of modern technologies (Java, Python, Kafka, PostgreSQL, Docker)
+- Build trust in agricultural supply chains through transparency
 
-### Backend Technologies
-- **Java 17+** - Core application backend and business logic
-- **JavaFX** - Desktop GUI framework for interactive dashboards
-- **Gradle 7+** - Build automation and dependency management
-- **SQLite** - Lightweight database with connection pooling
-- **Custom Blockchain** - SHA-256 based immutable ledger implementation
+## Architecture
 
-### Machine Learning Service
-- **Python 3.11** - ML service runtime environment
-- **FastAPI** - High-performance REST API framework
-- **ONNX Runtime** - Optimized ML model inference
-- **ResNet18** - Pre-trained computer vision model (transfer learning)
-- **PyTorch/TensorFlow** - Model training frameworks
-- **Pillow & NumPy** - Image processing libraries
+VeriCrop follows a microservices architecture with event-driven communication:
 
-### Development & Testing
-- **JUnit 5** - Java unit testing framework
-- **pytest** - Python testing framework
-- **Docker** - Containerization for ML service
-- **Docker Compose** - Multi-container orchestration
+```
+┌─────────────────────────────────────────────────────────────────┐
+│                    JavaFX GUI Application                       │
+│           (Farm, Logistics, Consumer, Analytics)                │
+└──────────────────┬──────────────────────────────────────────────┘
+                   │
+                   │ REST API / Kafka
+                   │
+┌──────────────────▼──────────────────────────────────────────────┐
+│                   VeriCrop Core Services                        │
+│  ┌──────────────┐ ┌──────────────┐ ┌──────────────────────┐   │
+│  │   Batch      │ │  Blockchain  │ │   Quality           │   │
+│  │  Management  │ │   Ledger     │ │  Evaluation         │   │
+│  └──────────────┘ └──────────────┘ └──────────────────────┘   │
+└────────┬──────────────────┬──────────────────┬─────────────────┘
+         │                  │                  │
+         ▼                  ▼                  ▼
+┌─────────────────┐ ┌──────────────┐ ┌─────────────────────┐
+│   PostgreSQL    │ │    Kafka     │ │   ML Service        │
+│   (Metadata)    │ │  (Events)    │ │   (FastAPI/ONNX)    │
+└─────────────────┘ └──────────────┘ └─────────────────────┘
+         │                  │                  │
+         │                  ▼                  │
+         │         ┌──────────────┐            │
+         │         │   Airflow    │            │
+         └─────────│ (Workflows)  │────────────┘
+                   └──────────────┘
+```
 
-### Key Dependencies
-**Java (build.gradle):**
-- JavaFX 17+
-- JUnit Jupiter 5.9.3
+### Key Data Flows
 
-**Python (requirements.txt):**
-- fastapi
-- uvicorn[standard]
-- pillow
-- numpy
-- onnx
-- onnxruntime
-- pytest (testing)
+1. **Batch Creation**: GUI → ML Service (quality prediction) → PostgreSQL + Kafka → Blockchain Ledger
+2. **Quality Evaluation**: Airflow DAG → Kafka (evaluation requests) → GUI Service → ML Service → Kafka (results)
+3. **Supply Chain Tracking**: GUI → Blockchain Ledger → Kafka (shipment events) → Analytics Dashboard
 
-## 🚀 Quick Start with Docker Compose (Recommended)
+## Components
 
-The easiest way to run the complete VeriCrop stack is using Docker Compose, which orchestrates all services:
+### vericrop-gui
+
+**Location**: `vericrop-gui/`
+
+JavaFX desktop application with Spring Boot integration. Provides four interactive dashboards:
+- **Farm Management**: Batch creation, quality assessment
+- **Logistics Tracking**: Shipment monitoring, condition alerts
+- **Consumer Verification**: QR code scanning, product journey
+- **Analytics Dashboard**: KPI monitoring, trend analysis
+
+**Tech Stack**: Java 17, JavaFX, Spring Boot, HikariCP, Kafka Client
+
+**Details**: See [vericrop-gui/README.md](vericrop-gui/README.md)
+
+### vericrop-core
+
+**Location**: `vericrop-core/`
+
+Core business logic library shared across modules:
+- Quality evaluation service (deterministic scoring)
+- Blockchain ledger implementation (SHA-256 hashing)
+- DTOs for batch, shipment, and evaluation records
+- File-based immutable ledger (JSONL format)
+
+**Tech Stack**: Java 17, Jackson, SLF4J
+
+### kafka-service
+
+**Location**: `kafka-service/`
+
+Kafka messaging service for event-driven communication:
+- Producer service for publishing batch events, quality alerts, shipment records
+- Consumer service for processing evaluation requests
+- In-memory mode for development without Kafka
+
+**Tech Stack**: Spring Boot, Spring Kafka
+
+**Topics**: 
+- `evaluation-requests`: Quality evaluation requests from Airflow
+- `evaluation-results`: Quality results from GUI service
+- `shipment-records`: Immutable ledger records
+- `quality-alerts`: Quality threshold alerts
+- `logistics-events`: Shipment tracking events
+- `blockchain-events`: Blockchain transactions
+
+### ml-service
+
+**Location**: `docker/ml-service/`
+
+FastAPI-based machine learning service for fruit quality prediction:
+- ResNet18 ONNX model (99.06% accuracy)
+- Quality classification: Fresh, Good, Fair, Poor
+- Batch management API
+- Dashboard data generation
+
+**Tech Stack**: Python 3.11, FastAPI, ONNX Runtime, Pillow, NumPy
+
+**Key File**: [docker/ml-service/app.py](docker/ml-service/app.py)
+
+### airflow
+
+**Location**: `airflow/dags/`
+
+Apache Airflow workflow orchestration:
+- `vericrop_dag.py`: End-to-end evaluation pipeline
+  - Produces evaluation requests to Kafka
+  - Calls REST API for quality evaluation
+  - Verifies ledger records
+  - Generates pipeline summary
+
+**Tech Stack**: Apache Airflow 2.7.1, Kafka Python Client
+
+### docker
+
+**Location**: `docker/`
+
+Docker configurations and compose files:
+- `docker-compose.yml`: Complete stack (PostgreSQL, Kafka, ML Service, Airflow)
+- `docker-compose-kafka.yml`: Kafka-only setup
+- `ml-service/Dockerfile`: ML service container
+
+## Quickstart
+
+Get VeriCrop running in under 5 minutes using Docker Compose.
 
 ### Prerequisites
 
-- **Docker** (20.10+) and **Docker Compose** (2.0+)
+Before you begin, ensure you have:
+
+- **Java 11+** (Java 17 recommended)
   ```bash
-  docker --version
-  docker-compose --version
+  java -version  # Should show 11 or higher
   ```
 
-- **Git** (for cloning the repository)
+- **Gradle** (included via wrapper)
+  ```bash
+  ./gradlew --version
+  ```
+
+- **Docker & Docker Compose**
+  ```bash
+  docker --version        # 20.10+
+  docker-compose --version  # 2.0+
+  ```
+
+- **Git**
   ```bash
   git --version
   ```
 
-### Launch the Complete Stack
+### Running the Complete Stack
 
 ```bash
-# Clone the repository
+# 1. Clone the repository
 git clone https://github.com/imperfectperson-max/vericrop-miniproject.git
 cd vericrop-miniproject
 
-# Build Java artifacts first (required before docker-compose)
+# 2. Build Java artifacts (required before docker-compose)
 ./gradlew build
 
-# Start all services
-docker-compose up --build
-
-# Or run in detached mode (background)
+# 3. Start all services with Docker Compose
 docker-compose up --build -d
+
+# 4. Wait for services to be healthy (2-3 minutes)
+docker-compose ps
+
+# 5. Verify services are running
+./scripts/smoke_test.sh  # If available
 ```
 
-**Alternative:** Use the build script to build everything:
-```bash
-./scripts/build-docker.sh
-docker-compose up -d
-```
-
-This will start:
-- ✅ **Zookeeper** - Kafka coordination (port 2181)
-- ✅ **Kafka** - Message broker (port 9092)
-- ✅ **Kafka UI** - Kafka monitoring (port 8081)
-- ✅ **VeriCrop GUI** - REST API (port 8080)
-- ✅ **ML Service** - Quality prediction (port 8000)
-- ✅ **PostgreSQL** - Application database (port 5432)
-- ✅ **Airflow** - Workflow orchestration (port 8082)
-  - Webserver UI
-  - Scheduler
-  - PostgreSQL metadata DB
-- ✅ **Redis** - Airflow backend
-- ✅ **Mosquitto** - MQTT broker (port 1883)
-
-### Verify the Stack
-
-Wait for all services to be healthy (2-3 minutes), then run the smoke test:
-
-```bash
-./scripts/smoke_test.sh
-```
-
-### Access the Services
+### Accessing the Services
 
 | Service | URL | Credentials |
 |---------|-----|-------------|
-| **VeriCrop API** | http://localhost:8080/api/health | - |
 | **Kafka UI** | http://localhost:8081 | - |
 | **Airflow UI** | http://localhost:8082 | admin / admin |
 | **ML Service** | http://localhost:8000/health | - |
+| **PostgreSQL** | localhost:5432 | vericrop / vericrop123 |
 
-### Test the API
+### Quick Test
 
 ```bash
-# Health check
-curl http://localhost:8080/api/health
+# Test ML service health
+curl http://localhost:8000/health
+# Expected: {"status":"healthy"}
 
-# Evaluate fruit quality
-curl -X POST http://localhost:8080/api/evaluate \
-  -H "Content-Type: application/json" \
-  -d '{
-    "batch_id": "BATCH_001",
-    "product_type": "apple",
-    "farmer_id": "farmer_001"
-  }'
+# Run the JavaFX GUI (from project root)
+./gradlew :vericrop-gui:run
 ```
 
-### Stop the Stack
+### Stopping the Stack
 
 ```bash
 # Stop all services
 docker-compose down
 
-# Stop and remove volumes (clean slate)
+# Stop and remove all data
 docker-compose down -v
 ```
 
-## 🚀 Installation
+## Local Development
 
-### Prerequisites (for local development without Docker)
+For active development without Docker containers.
 
-Before installing VeriCrop locally, ensure you have the following installed:
+### 1. Start External Services
 
-- **Java Development Kit (JDK) 17 or higher**
-  ```bash
-  java -version  # Should show version 17 or higher
-  ```
-
-- **Python 3.11**
-  ```bash
-  python3 --version  # Should show version 3.11.x
-  ```
-
-- **Docker and Docker Compose** (optional, for ML service only)
-  ```bash
-  docker --version
-  docker-compose --version
-  ```
-
-- **Git** (for cloning the repository)
-  ```bash
-  git --version
-  ```
-
-### Step-by-Step Installation
-
-#### 1. Clone the Repository
+Start only the infrastructure services (PostgreSQL, Kafka, Zookeeper):
 
 ```bash
-git clone https://github.com/imperfectperson-max/vericrop-miniproject.git
-cd vericrop-miniproject
+# Start just PostgreSQL and Kafka
+docker-compose up -d postgres kafka zookeeper
+
+# Verify services
+docker-compose ps
 ```
 
-#### 2. Set Up the ML Service (Python)
+### 2. Configure Environment
+
+Copy the example environment file and customize:
+
+```bash
+# Copy example configuration
+cp .env.example .env
+
+# Edit .env with your settings (optional, defaults work for local dev)
+nano .env
+```
+
+Key configuration options:
+- `POSTGRES_HOST=localhost` - Database host
+- `KAFKA_BOOTSTRAP_SERVERS=localhost:9092` - Kafka broker
+- `ML_SERVICE_URL=http://localhost:8000` - ML service URL
+- `VERICROP_LOAD_DEMO=true` - Use demo mode if ML model unavailable
+
+### 3. Run the ML Service
 
 **Option A: Using Docker (Recommended)**
 
 ```bash
 cd docker/ml-service
 docker build -t vericrop-ml .
-docker run -d -p 8000:8000 --name vericrop-ml-service vericrop-ml
+docker run -d -p 8000:8000 --name vericrop-ml vericrop-ml
+
+# Verify
+curl http://localhost:8000/health
 ```
 
 **Option B: Local Python Environment**
@@ -236,334 +291,316 @@ docker run -d -p 8000:8000 --name vericrop-ml-service vericrop-ml
 ```bash
 cd docker/ml-service
 
-# Create and activate virtual environment
+# Create virtual environment
 python3 -m venv venv
-source venv/bin/activate  # On Windows: venv\Scripts\activate
+source venv/bin/activate  # Windows: venv\Scripts\activate
 
 # Install dependencies
 pip install -r requirements.txt
 
-# Run the ML service
+# Run service
 uvicorn app:app --host 0.0.0.0 --port 8000
 ```
 
-#### 3. Build the Java Application
+### 4. Run the JavaFX GUI Application
+
+From the project root:
 
 ```bash
-# Return to project root
-cd /path/to/vericrop-miniproject
-
-# Build the project
-./gradlew build
-
-# Or on Windows:
-gradlew.bat build
-```
-
-#### 4. Verify Installation
-
-Check that the ML service is running:
-```bash
-curl http://localhost:8000/health
-```
-
-Expected response: `{"status":"healthy"}`
-
-## 🚀 Usage
-
-### Starting the Application
-
-VeriCrop provides two interfaces:
-1. **JavaFX Desktop Application** - Interactive dashboards for farm, logistics, consumer, and analytics
-2. **REST API** - RESTful endpoints for quality evaluation and shipment management
-
-#### Option 1: REST API (Spring Boot)
-
-```bash
-# Build and run the REST API
-./gradlew :vericrop-gui:bootRun
-
-# Or run the JAR directly
-java -jar vericrop-gui/build/libs/vericrop-gui-1.0.0.jar
-```
-
-The API will start on `http://localhost:8080`
-
-**Quick Test:**
-```bash
-# Health check
-curl http://localhost:8080/api/health
-
-# Evaluate fruit quality
-curl -X POST http://localhost:8080/api/evaluate \
-  -H "Content-Type: application/json" \
-  -d '{
-    "batch_id": "BATCH_001",
-    "product_type": "apple",
-    "farmer_id": "farmer_001"
-  }'
-```
-
-#### Option 2: JavaFX Desktop Application
-
-```bash
-# From project root
+# Run the GUI application
 ./gradlew :vericrop-gui:run
 
-# Or on Windows:
+# Or on Windows
 gradlew.bat :vericrop-gui:run
 ```
 
-The JavaFX desktop application will launch with four available dashboards.
+The application will:
+1. Connect to PostgreSQL for batch metadata
+2. Connect to Kafka for event streaming
+3. Connect to ML Service for quality predictions
+4. Launch the JavaFX GUI with four dashboards
 
-#### Option 3: ML Service (Optional)
+### 5. Run Airflow (Optional)
 
-If you want to use the external ML service:
-
-Using Docker:
-```bash
-cd docker/ml-service
-docker start vericrop-ml-service
-
-# Or build and run if first time:
-docker build -t vericrop-ml .
-docker run -d -p 8000:8000 --name vericrop-ml-service vericrop-ml
-```
-
-Verify the service is healthy:
-```bash
-curl http://localhost:8000/health
-# Expected: {"status":"healthy"}
-```
-
-### Using the Dashboards
-
-#### Farm Management Dashboard
-- Upload fruit images for quality assessment
-- Create batches with AI-powered classification
-- View quality distribution and analytics
-- Generate blockchain records for batches
-
-#### Logistics Tracking Dashboard
-- Monitor shipments in real-time
-- Track temperature and humidity
-- View route information and ETAs
-- Receive condition alerts
-
-#### Consumer Verification Portal
-- Scan QR codes to verify product authenticity
-- View complete supply chain journey
-- Check quality metrics and shelf life predictions
-
-#### Analytics & Reporting Dashboard
-- Monitor KPIs and performance metrics
-- Analyze supplier performance
-- View quality trends over time
-- Check temperature compliance
-
-### API Usage Examples
-
-#### VeriCrop REST API (Port 8080)
+For workflow orchestration:
 
 ```bash
-# Health check
-curl http://localhost:8080/api/health
+# Airflow is included in docker-compose
+docker-compose up -d airflow-webserver airflow-scheduler
 
-# Evaluate fruit quality
-curl -X POST http://localhost:8080/api/evaluate \
-  -H "Content-Type: application/json" \
-  -d '{
-    "batch_id": "BATCH_001",
-    "product_type": "apple",
-    "farmer_id": "farmer_001"
-  }'
+# Access UI at http://localhost:8082
+# Login: admin / admin
 
-# Get shipment record
-curl http://localhost:8080/api/shipments/550e8400-e29b-41d4-a716-446655440000
-
-# Get all shipments for a batch
-curl http://localhost:8080/api/shipments?batch_id=BATCH_001
+# Enable the VeriCrop DAG
+# Navigate to DAGs → vericrop_evaluation_pipeline → Toggle On
 ```
 
-#### ML Service API (Port 8000 - Optional)
+### Development Workflow
 
 ```bash
-# Test fruit quality prediction
-curl -X POST -F "file=@examples/sample.jpg" http://localhost:8000/predict
+# 1. Make code changes in your IDE
 
-# Get farm dashboard data
-curl http://localhost:8000/dashboard/farm
+# 2. Build and test
+./gradlew build
+./gradlew test
 
-# Get analytics data
-curl http://localhost:8000/dashboard/analytics
+# 3. Run the application
+./gradlew :vericrop-gui:run
 
-# Get batch information
-curl http://localhost:8000/batches
+# 4. Test specific modules
+./gradlew :vericrop-core:test
+./gradlew :kafka-service:test
+
+# 5. View logs
+tail -f logs/vericrop-gui.log
 ```
 
-**📚 For comprehensive API documentation, examples, and Kafka integration guide, see [KAFKA_INTEGRATION.md](KAFKA_INTEGRATION.md)**
+## Configuration
 
-### End-to-End Workflow with Airflow
+VeriCrop uses environment variables for configuration. All settings have sensible defaults for local development.
 
-The VeriCrop platform includes an Airflow DAG that demonstrates the complete pipeline:
+### Environment Variables
 
-1. **Access Airflow UI**: http://localhost:8082
-   - Login: `admin` / `admin`
+Copy `.env.example` to `.env` and customize as needed:
 
-2. **Enable the DAG**: Find `vericrop_evaluation_pipeline` and toggle it on
-
-3. **Trigger the DAG**: Click the "play" button to manually trigger
-
-4. **Monitor Execution**:
-   - The DAG produces evaluation requests to Kafka
-   - Calls the VeriCrop REST API for quality evaluation
-   - Verifies ledger records
-   - Generates a pipeline summary
-
-5. **View Kafka Messages**: http://localhost:8081
-   - Monitor topics: `evaluation-requests`, `evaluation-results`, `shipment-records`
-
-#### Kafka Topics
-
-The platform uses the following Kafka topics:
-
-| Topic | Purpose | Producer | Consumer |
-|-------|---------|----------|----------|
-| `evaluation-requests` | Quality evaluation requests | Airflow DAG | VeriCrop GUI |
-| `evaluation-results` | Quality evaluation results | VeriCrop GUI | Analytics |
-| `shipment-records` | Ledger records | VeriCrop GUI | Analytics |
-| `quality-alerts` | Quality threshold alerts | VeriCrop GUI | Logistics |
-| `logistics-events` | Shipment tracking events | Logistics | Analytics |
-| `blockchain-events` | Blockchain transactions | VeriCrop GUI | Audit |
-
-### Configuration
-
-#### Docker Compose Configuration
-
-The application is configured via environment variables in `docker-compose.yml`. To customize:
-
-1. Copy `.env.example` to `.env`:
-   ```bash
-   cp .env.example .env
-   ```
-
-2. Edit `.env` with your settings:
-   ```bash
-   # PostgreSQL Configuration
-   POSTGRES_USER=vericrop
-   POSTGRES_PASSWORD=vericrop123
-   POSTGRES_DB=vericrop
-   
-   # Kafka Configuration
-   KAFKA_BOOTSTRAP_SERVERS=kafka:29092
-   
-   # VeriCrop API Configuration
-   VERICROP_API_URL=http://vericrop-gui:8080
-   ML_SERVICE_URL=http://ml-service:8000
-   
-   # Quality Evaluation
-   QUALITY_PASS_THRESHOLD=0.7
-   ```
-
-3. Restart services:
-   ```bash
-   docker-compose down
-   docker-compose up -d
-   ```
-
-#### Local Development Configuration
-
-For local development without Docker, configure via `vericrop-gui/src/main/resources/application.yml`:
-
-```yaml
-server:
-  port: 8080  # REST API port
-
-kafka:
-  enabled: true  # Set to true when Kafka is available
-  
-spring:
-  kafka:
-    bootstrap-servers: localhost:9092
-
-ledger:
-  path: ledger  # Path to store shipment records
-
-quality:
-  evaluation:
-    pass-threshold: 0.7
-
-ml:
-  service:
-    url: http://localhost:8000
-```
-
-#### Demo Mode Configuration
-
-VeriCrop supports an optional demo mode that loads sample data for testing and demonstrations. Demo mode is **disabled by default** to ensure production environments start clean.
-
-**Enable Demo Mode:**
-
-Via environment variable:
 ```bash
-export VERICROP_LOAD_DEMO=true
-./gradlew :vericrop-gui:bootRun
+cp .env.example .env
 ```
 
-Via system property:
+### Key Configuration Sections
+
+#### PostgreSQL (Batch Metadata)
+
 ```bash
-./gradlew :vericrop-gui:bootRun -Dvericrop.loadDemo=true
+POSTGRES_USER=vericrop           # Database user
+POSTGRES_PASSWORD=vericrop123    # Database password
+POSTGRES_DB=vericrop             # Database name
+POSTGRES_HOST=localhost          # Database host
+POSTGRES_PORT=5432               # Database port
+
+# Connection Pool (HikariCP)
+DB_POOL_SIZE=10                  # Connection pool size
+DB_CONNECTION_TIMEOUT=30000      # Timeout in milliseconds
 ```
 
-Via Docker:
+**Note**: PostgreSQL stores batch metadata. Blockchain ledger and shipment records are stored in file-based JSONL format.
+
+#### Kafka (Event Messaging)
+
 ```bash
-docker-compose up -d -e VERICROP_LOAD_DEMO=true
+KAFKA_BOOTSTRAP_SERVERS=localhost:9092  # Kafka broker address
+KAFKA_ENABLED=true                      # Enable/disable Kafka
+KAFKA_ACKS=all                         # Producer acknowledgment (all/1/0)
+KAFKA_RETRIES=3                        # Retry attempts
+KAFKA_IDEMPOTENCE=true                 # Idempotent producer
+
+# Kafka Topics
+KAFKA_TOPIC_BATCH_EVENTS=batch-events
+KAFKA_TOPIC_QUALITY_ALERTS=quality-alerts
+KAFKA_TOPIC_LOGISTICS_EVENTS=logistics-events
+KAFKA_TOPIC_BLOCKCHAIN_EVENTS=blockchain-events
 ```
 
-When demo mode is enabled:
-- Blockchain initializer adds sample blocks
-- GUI controllers populate sample analytics data
-- ML service provides fallback predictions
-- Charts show demo data with "(demo)" labels
+**Note**: Set `KAFKA_ENABLED=false` to run without Kafka. The application will use in-memory messaging.
 
-**Note:** See [KAFKA_INTEGRATION.md](KAFKA_INTEGRATION.md) for detailed configuration options and advanced setup.
+#### ML Service (FastAPI)
 
-## 🧪 Running Tests
+```bash
+ML_SERVICE_URL=http://localhost:8000    # ML service base URL
+ML_SERVICE_TIMEOUT=30000                # HTTP timeout (ms)
+ML_SERVICE_RETRIES=3                    # Retry attempts
+VERICROP_LOAD_DEMO=true                 # Enable demo mode
+```
+
+**Note**: When `VERICROP_LOAD_DEMO=true`, the ML service returns mock predictions if the ONNX model is unavailable.
+
+#### Application Settings
+
+```bash
+VERICROP_MODE=dev                       # dev or prod
+SERVER_PORT=8080                        # REST API port
+LOG_LEVEL=INFO                          # Logging level (DEBUG, INFO, WARN, ERROR)
+QUALITY_PASS_THRESHOLD=0.7              # Quality threshold (0.0-1.0)
+LEDGER_PATH=/app/ledger                 # Path for ledger storage
+```
+
+#### Airflow Configuration
+
+```bash
+AIRFLOW_ADMIN_USERNAME=admin            # Airflow UI username
+AIRFLOW_ADMIN_PASSWORD=admin            # Airflow UI password
+AIRFLOW_DB_USER=airflow                 # Airflow metadata DB user
+AIRFLOW_DB_PASSWORD=airflow123          # Airflow metadata DB password
+```
+
+### Configuration Files
+
+- **`.env.example`**: Template with all available configuration options
+- **`vericrop-gui/src/main/resources/application.yml`**: Spring Boot application configuration (overridden by environment variables)
+- **`docker-compose.yml`**: Docker Compose service configuration
+
+### Using .env.example
+
+The `.env.example` file contains all configuration options with comments explaining each setting:
+
+```bash
+# View the example configuration
+cat .env.example
+
+# Copy and customize
+cp .env.example .env
+nano .env
+```
+
+**Important**: Never commit `.env` files with real credentials to version control. The `.env.example` is tracked for reference only.
+
+## ML Service Contract
+
+The ML Service provides REST API endpoints for quality prediction and dashboard data.
+
+### Base URL
+
+```
+http://localhost:8000
+```
+
+### Endpoints
+
+#### Health Check
+
+```bash
+GET /health
+
+# Response
+{
+  "status": "healthy"
+}
+```
+
+#### Predict Quality (Image Upload)
+
+```bash
+POST /predict
+Content-Type: multipart/form-data
+
+# Request (Form Data)
+file: <image-file>
+
+# Response
+{
+  "quality_score": 0.92,
+  "quality_label": "Fresh",
+  "confidence": 0.95,
+  "metadata": {
+    "color_consistency": 0.88,
+    "size_uniformity": 0.85,
+    "defect_density": 0.02
+  }
+}
+```
+
+#### List Batches
+
+```bash
+GET /batches
+
+# Response
+{
+  "batches": [
+    {
+      "batch_id": "BATCH_001",
+      "name": "Apple Batch 001",
+      "farmer": "John Farmer",
+      "quality_score": 0.92,
+      "timestamp": "2024-01-15T10:30:00Z"
+    }
+  ]
+}
+```
+
+#### Farm Dashboard Data
+
+```bash
+GET /dashboard/farm
+
+# Response
+{
+  "total_batches": 45,
+  "avg_quality": 0.87,
+  "recent_batches": [...]
+}
+```
+
+#### Analytics Dashboard Data
+
+```bash
+GET /dashboard/analytics
+
+# Response
+{
+  "kpi_metrics": {
+    "total_batches": 45,
+    "avg_quality": 0.87,
+    "spoilage_rate": 0.03
+  },
+  "quality_trends": [...]
+}
+```
+
+### Integration with GUI and CLI
+
+The ML Service is called by:
+
+1. **JavaFX GUI**: `vericrop-gui` uses `MLClientService` to communicate with the ML service
+2. **REST API**: Spring Boot controllers proxy requests to the ML service
+3. **Airflow DAG**: Workflow tasks call endpoints directly
+
+### Implementation Details
+
+For detailed implementation, inspect:
+- **ML Service**: [docker/ml-service/app.py](docker/ml-service/app.py)
+- **Java Client**: `vericrop-gui/src/main/java/org/vericrop/gui/service/MLClientService.java`
+- **Model Logic**: `docker/ml-service/app.py` (lines 100-200, prediction logic)
+
+## Testing
+
+VeriCrop includes comprehensive test suites for Java and Python components.
 
 ### Java Tests
 
-Run all Java tests using Gradle:
+Run all tests:
 
 ```bash
-# Run all tests
+# Run all Java tests
 ./gradlew test
 
 # Run tests for specific module
 ./gradlew :vericrop-core:test
 ./gradlew :vericrop-gui:test
+./gradlew :kafka-service:test
 
 # Run specific test class
 ./gradlew test --tests "*.BlockchainTest"
 ./gradlew test --tests "*.MLServiceClientTest"
 
-# Run tests with detailed output
+# Run with detailed output
 ./gradlew test --info
 ```
 
 View test reports:
 ```bash
-# Reports are generated at:
-# build/reports/tests/test/index.html
+# HTML reports generated at:
+open build/reports/tests/test/index.html
 ```
 
 ### Python Tests
 
-Run Python tests for the ML service:
+Run ML service tests:
 
 ```bash
 cd docker/ml-service
 
-# Install test dependencies (if not already installed)
+# Install test dependencies
 pip install -r requirements-test.txt
 
 # Run all tests
@@ -574,659 +611,324 @@ pytest --cov=. --cov-report=html
 
 # Run specific test file
 pytest tests/test_predict.py
-pytest tests/test_health.py
 
 # Run with verbose output
 pytest -v
-
-# Run with detailed output showing print statements
-pytest -s
 ```
 
-View coverage reports:
-```bash
-# HTML coverage report generated at:
-# htmlcov/index.html
-```
+### Contract Tests
 
-### Testing Checklist
-
-The test suite covers:
-- ✅ Unit tests for blockchain operations
-- ✅ Integration tests for ML service communication
-- ✅ Database operation tests
-- ✅ Service layer validation
-- ✅ API endpoint functionality
-- ✅ Model inference accuracy
-
-**Note:** Currently, some test files may be placeholders. Contributors should add comprehensive tests as features are implemented.
-
-### Airflow DAG Testing
-
-VeriCrop includes an Airflow DAG for end-to-end quality evaluation pipeline:
+Test the integration between services:
 
 ```bash
-# Install Airflow and dependencies
-pip install apache-airflow kafka-python
-
-# Initialize Airflow
-airflow db init
-
-# Start Airflow webserver
-airflow webserver --port 8081
-
-# Start Airflow scheduler (in another terminal)
-airflow scheduler
-
-# Access UI at http://localhost:8081
-# Enable and trigger: vericrop_evaluation_pipeline
-```
-
-The DAG performs:
-1. Produces evaluation requests to Kafka
-2. Calls REST API for evaluation
-3. Verifies ledger records
-4. Generates pipeline summary
-
-### Running Linters
-
-**Java:**
-```bash
-# Build with warnings
-./gradlew build --warning-mode all
-```
-
-**Python:**
-```bash
-# Check Airflow DAG syntax
-python airflow/dags/vericrop_dag.py
-```
-
-## 🏗️ System Architecture
-```bash
-┌─────────────────────────────────────────────────────────────────┐
-│                      JavaFX Client Application                  │
-│  ┌─────────────┐  ┌─────────────┐  ┌─────────────┐  ┌─────────┐ │
-│  │   Farm      │  │ Logistics   │  │  Consumer   │  │ Analytics│ │
-│  │  Dashboard  │  │  Dashboard  │  │   Portal    │  │ Dashboard│ │
-│  └─────────────┘  └─────────────┘  └─────────────┘  └─────────┘ │
-└─────────────────────────────────────────────────────────────────┘
-                               │
-                               ▼
-┌─────────────────────────────────────────────────────────────────┐
-│                    VeriCrop Core (Java)                         │
-│  ┌─────────────┐  ┌─────────────┐  ┌─────────────┐              │
-│  │ ML Service  │  │ Blockchain  │  │ Database    │              │
-│  │  Client     │  │   Service   │  │   Layer     │              │
-│  └─────────────┘  └─────────────┘  └─────────────┘              │
-└─────────────────────────────────────────────────────────────────┘
-                               │
-                               ▼
-┌─────────────────────────────────────────────────────────────────┐
-│                 Python ML Service (FastAPI)                     │
-│  ┌─────────────┐  ┌─────────────┐  ┌─────────────┐              │
-│  │  ResNet18   │  │   REST API  │  │ SQLite      │              │
-│  │   Model     │  │  Endpoints  │  │  Database   │              │
-│  └─────────────┘  └─────────────┘  └─────────────┘              │
-└─────────────────────────────────────────────────────────────────┘
-```
-## 📋 Core Components
-
-## 🎛️ Dashboards
-
-### 1. Farm Management Dashboard
-- **Batch Creation**: Upload fruit images and create quality-assessed batches
-- **Real-time Analytics**: Quality distribution, performance metrics
-- **Blockchain Integration**: Immutable batch records
-- **Quality Assessment**: AI-powered fruit classification (Fresh/Low Quality/Rotten)
-
-### 2. Logistics Tracking Dashboard
-- **Real-time Monitoring**: Temperature, humidity, location tracking
-- **Route Optimization**: ETA predictions and route mapping
-- **Condition Alerts**: Temperature breach notifications
-- **Quality Degradation Tracking**: Real-time quality monitoring during transit
-
-### 3. Consumer Verification Portal
-- **QR Code Scanning**: Instant product authentication
-- **Product Journey**: Complete supply chain transparency
-- **Quality Metrics**: Color consistency, size uniformity, defect density
-- **Shelf Life Prediction**: Remaining freshness estimation
-
-### 4. Analytics & Reporting Dashboard
-- **KPI Monitoring**: Total batches, average quality, spoilage rates
-- **Supplier Performance**: Quality ratings and reliability scores
-- **Trend Analysis**: Quality trends over time
-- **Temperature Compliance**: Environmental condition monitoring
-
-## 🔧 Technical Components
-
-### Backend Services
-- **ML Service**: FastAPI with ONNX ResNet18 model (99.06% accuracy)
-- **Blockchain**: Custom implementation with SHA-256 hashing
-- **Database**: SQLite with connection pooling
-- **REST API**: Comprehensive endpoints for all dashboards
-- **Messaging System**: Actor-to-actor communication with persistence
-- **Quality Decay Model**: Temperature and humidity-based degradation tracking
-- **Delivery Simulator**: Real-time route simulation with environmental monitoring
-
-### Frontend Application
-- **JavaFX**: Modern, responsive user interface
-- **Charts & Visualizations**: Real-time data representation with labels and legends
-- **Multi-threading**: Non-blocking UI with background processing
-- **Configuration Management**: Typesafe config with environment support
-
-## 🛠️ API Endpoints
-
-### VeriCrop REST API Endpoints (Port 8080)
-
-#### Evaluation & Shipments
-```
-POST /api/evaluate              # Evaluate fruit quality
-GET  /api/shipments/{id}        # Get shipment by ledger ID
-GET  /api/shipments             # Get all shipments (filter by batch_id)
-GET  /api/health                # Health check
-```
-
-#### Messaging API (v1)
-```
-POST /api/v1/messaging/send                    # Send a message
-GET  /api/v1/messaging/inbox                   # Get inbox (by recipient role/id)
-GET  /api/v1/messaging/sent                    # Get sent messages (by sender)
-GET  /api/v1/messaging/batch/{batchId}         # Messages for a batch
-GET  /api/v1/messaging/shipment/{shipmentId}   # Messages for a shipment
-PUT  /api/v1/messaging/read/{messageId}        # Mark message as read
-DELETE /api/v1/messaging/{messageId}           # Delete a message
-```
-
-#### Quality Decay API (v1)
-```
-POST /api/v1/quality/predict      # Predict quality at future time
-POST /api/v1/quality/simulate     # Simulate quality over route
-GET  /api/v1/quality/decay-rate   # Get decay rate for conditions
-GET  /api/v1/quality/ideal-ranges # Get ideal temp/humidity ranges
-```
-
-#### Delivery Simulation API (v1)
-```
-POST /api/v1/delivery/generate-route              # Generate simulated route
-POST /api/v1/delivery/start-simulation            # Start delivery simulation
-POST /api/v1/delivery/stop-simulation             # Stop simulation
-GET  /api/v1/delivery/simulation-status/{id}      # Get simulation status
-```
-
-### Example Usage
-
-#### Send a Message
-```bash
-curl -X POST http://localhost:8080/api/v1/messaging/send \
-  -H "Content-Type: application/json" \
-  -d '{
-    "senderRole": "farmer",
-    "senderId": "farmer_001",
-    "recipientRole": "supplier",
-    "recipientId": "supplier_001",
-    "subject": "Batch Ready",
-    "content": "Batch ABC123 is ready for pickup",
-    "batchId": "ABC123"
-  }'
-```
-
-#### Predict Quality Decay
-```bash
-curl -X POST http://localhost:8080/api/v1/quality/predict \
-  -H "Content-Type: application/json" \
-  -d '{
-    "current_quality": 95.0,
-    "temperature": 12.0,
-    "humidity": 85.0,
-    "hours_in_future": 24.0
-  }'
-```
-
-#### Start Delivery Simulation
-```bash
-# First, generate a route
-curl -X POST http://localhost:8080/api/v1/delivery/generate-route \
-  -H "Content-Type: application/json" \
-  -d '{
-    "origin": {"latitude": 40.7128, "longitude": -74.0060, "name": "Farm"},
-    "destination": {"latitude": 34.0522, "longitude": -118.2437, "name": "Market"},
-    "num_waypoints": 10,
-    "avg_speed_kmh": 60
-  }'
-
-# Then start simulation with the generated route
-curl -X POST http://localhost:8080/api/v1/delivery/start-simulation \
-  -H "Content-Type: application/json" \
-  -d '{
-    "shipment_id": "SHIP_001",
-    "route": [...],
-    "update_interval_ms": 5000
-  }'
-```
-
-### ML Service Endpoints (Port 8000)
-
-```
-POST /predict              # Fruit quality prediction
-GET  /dashboard/farm       # Farm dashboard data
-GET  /dashboard/analytics  # Analytics data
-GET  /health              # Service health check
-GET  /batches             # Batch management
-```
-
-#### ML Service Example
-```bash
-# Test prediction (requires ML model or VERICROP_LOAD_DEMO=true)
-curl -X POST -F "file=@fruit.jpg" http://localhost:8000/predict
-
-# Check health
-curl http://localhost:8000/health
-```
-
-## 📊 Machine Learning Model
-
-### Model Specifications
-- **Architecture**: ResNet18 (transfer learning)
-- **Accuracy**: 99.06% validation accuracy
-- **Classes**: Fresh, Low Quality, Rotten
-- **Input Size**: 224x224 RGB images
-- **Framework**: ONNX Runtime for optimized inference
-- **Training Data**: 2,671 samples (balanced dataset)
-
-### Quality Metrics
-- **Color Consistency**: 92% average
-- **Size Uniformity**: 87% average
-- **Defect Density**: 3% average
-- **Confidence Threshold**: 85% for Prime grade classification
-
-### Model Performance
-The model was trained using transfer learning on the ResNet18 architecture, achieving state-of-the-art accuracy for fruit quality classification. The ONNX format enables efficient cross-platform deployment.
-
-## ⛓️ Blockchain Implementation
-
-### Features
-- **Immutable Records**: SHA-256 hashing for data integrity
-- **Supply Chain Tracking**: Complete product journey from farm to consumer
-- **Smart Transactions**: CREATE_BATCH, TRANSFER, QUALITY_CHECK, DELIVERY
-- **Validation**: Chain integrity verification
-- **Persistent Storage**: JSON-based chain files for distributed ledger
-
-### Transaction Types
-
-```java
-CREATE_BATCH     // Farmer creates new batch
-QUALITY_CHECK    // Quality assessment recording  
-TRANSFER         // Ownership transfer between parties
-DELIVERY         // Final delivery confirmation
-```
-
-### Blockchain Structure
-Each block contains:
-- Previous block hash
-- Timestamp
-- Transaction data
-- Data hash (SHA-256)
-- Merkle root for data integrity
-
-## 🌡️ Quality Decay Model
-
-VeriCrop includes a deterministic quality decay model that tracks produce quality degradation based on environmental conditions.
-
-### Model Parameters
-
-**Ideal Ranges (Cold Chain):**
-- Temperature: 4-8°C
-- Humidity: 70-85%
-
-**Decay Factors:**
-- Base decay: 0.5% quality loss per hour (in ideal conditions)
-- Temperature penalty: 0.3% per degree outside ideal range per hour
-- Humidity penalty: 0.1% per percent outside ideal range per hour
-
-### Quality Calculation
-
-Quality at time *t*:
-```
-Quality(t) = Initial_Quality - (Decay_Rate × Hours_Elapsed)
-
-Decay_Rate = Base_Decay + Temp_Penalty + Humidity_Penalty
-```
-
-### Example Scenarios
-
-1. **Ideal Conditions** (5°C, 75% humidity):
-   - Decay rate: 0.5%/hour
-   - Quality after 24h: 100% → 88%
-
-2. **High Temperature** (15°C, 75% humidity):
-   - Temp deviation: 7°C above ideal
-   - Decay rate: 0.5 + (7 × 0.3) = 2.6%/hour
-   - Quality after 24h: 100% → 37.6%
-
-3. **Poor Conditions** (20°C, 95% humidity):
-   - Temp deviation: 12°C above ideal
-   - Humidity deviation: 10% above ideal
-   - Decay rate: 0.5 + (12 × 0.3) + (10 × 0.1) = 5.1%/hour
-   - Quality after 24h: 100% → 0% (critical)
-
-### API Usage
-
-Predict future quality:
-```bash
-curl -X POST http://localhost:8080/api/v1/quality/predict \
-  -H "Content-Type: application/json" \
-  -d '{
-    "current_quality": 95.0,
-    "temperature": 12.0,
-    "humidity": 85.0,
-    "hours_in_future": 24.0
-  }'
-```
-
-Simulate quality over a route:
-```bash
-curl -X POST http://localhost:8080/api/v1/quality/simulate \
-  -H "Content-Type: application/json" \
-  -d '{
-    "initial_quality": 100.0,
-    "readings": [
-      {"timestamp": 1700000000000, "temperature": 5.0, "humidity": 75.0},
-      {"timestamp": 1700003600000, "temperature": 8.0, "humidity": 80.0},
-      {"timestamp": 1700007200000, "temperature": 6.0, "humidity": 77.0}
-    ]
-  }'
-```
-
-## 📦 Delivery Simulation
-
-The delivery simulator generates realistic routes with environmental conditions and tracks shipments in real-time.
-
-### Features
-
-- **Route Generation**: Create routes between geo-coordinates with configurable waypoints
-- **Environmental Readings**: Temperature and humidity sampled from realistic distributions
-- **Real-time Updates**: Location and condition updates via messaging system
-- **Simulation Control**: Start, stop, and monitor active simulations
-
-### Simulation Flow
-
-1. Generate a route between origin and destination
-2. Start simulation with update interval (e.g., 5 seconds)
-3. Simulator emits location updates as messages
-4. Quality degradation calculated based on conditions
-5. Alerts sent when temperature/humidity exceed thresholds
-
-### Example Usage
-
-See [API Endpoints](#-api-endpoints) section for delivery simulation examples.
-
-## 💬 Messaging System
-
-VeriCrop includes an actor-to-actor messaging system for communication between supply chain participants.
-
-### Supported Roles
-
-- `farmer` - Produce farmers
-- `supplier` - Distribution suppliers
-- `logistics` - Transportation and logistics providers
-- `consumer` - End consumers
-
-### Message Features
-
-- Direct messaging (role-to-role)
-- Broadcast messaging (to all roles)
-- Batch and shipment filtering
-- Read receipts and status tracking
-- File persistence (ledger/messages.jsonl)
-
-### Message Structure
-
-```json
-{
-  "messageId": "uuid",
-  "senderRole": "farmer",
-  "senderId": "farmer_001",
-  "recipientRole": "supplier",
-  "recipientId": "supplier_001",
-  "subject": "Batch Ready",
-  "content": "Batch ABC123 ready for pickup",
-  "timestamp": 1700000000000,
-  "status": "sent",
-  "batchId": "ABC123",
-  "shipmentId": null
-}
-```
-
-## 🗃️ Database Schema
-
-### Core Tables
-
-```sql
-batches              # Batch information and quality scores
-supply_chain_events  # Timeline of supply chain events
-analytics            # Performance metrics and KPI data
-```
-
-**Note**: Detailed schema documentation is available in the source code database initialization files.
-
-## 📦 Deployment
-
-### Docker Deployment
-
-#### ML Service
-```dockerfile
-FROM python:3.11-slim
-WORKDIR /app
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-COPY app.py .
-COPY ml-models/ ./ml-models/
-EXPOSE 8000
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
-```
-
-Build and run:
-```bash
-cd docker/ml-service
-docker build -t vericrop-ml .
-docker run -d -p 8000:8000 --name vericrop-ml-service vericrop-ml
-```
-
-#### Using Docker Compose
-
-```bash
-# Start all services
+# Start services
 docker-compose up -d
 
-# Stop all services
-docker-compose down
-
-# View logs
-docker-compose logs -f
+# Run contract tests (if available)
+./gradlew :vericrop-gui:integrationTest
 ```
 
-### Java Application Deployment
+### Manual Testing
 
 ```bash
-# Build JAR
-./gradlew :vericrop-core:jar
+# Test ML Service
+curl http://localhost:8000/health
+curl -X POST -F "file=@examples/sample.jpg" http://localhost:8000/predict
 
-# Run JAR
-java -jar vericrop-core/build/libs/vericrop-core-0.1.0.jar
+# Test PostgreSQL
+docker exec -it vericrop-postgres psql -U vericrop -d vericrop -c "SELECT COUNT(*) FROM batches;"
+
+# Test Kafka
+docker exec -it vericrop-kafka kafka-topics --list --bootstrap-server localhost:9092
 ```
 
-### Production Considerations
+### Unit Test Coverage
 
-**TODO**: Add production deployment guidelines including:
-- Environment-specific configurations
-- Scaling strategies
-- Security best practices
-- Monitoring and logging setup
-- Database migration procedures
+Current test coverage:
+- ✅ Blockchain operations
+- ✅ Quality evaluation service
+- ✅ File ledger service
+- ✅ ML service health endpoints
+- ✅ Batch creation and retrieval
+- ⚠️ Integration tests (partial)
+- ⚠️ GUI controllers (manual testing)
 
-## 🤝 Contributing
+## Contributing
 
-We welcome contributions to VeriCrop! Here's how you can help:
+We welcome contributions to VeriCrop! Here's how to get started.
 
-### How to Contribute
+### Development Setup
 
 1. **Fork the repository**
    ```bash
-   # Click the 'Fork' button on GitHub
-   ```
-
-2. **Clone your fork**
-   ```bash
+   # Fork via GitHub UI, then clone
    git clone https://github.com/YOUR_USERNAME/vericrop-miniproject.git
    cd vericrop-miniproject
    ```
 
-3. **Create a feature branch**
+2. **Create a feature branch**
    ```bash
    git checkout -b feature/your-feature-name
    ```
 
-4. **Make your changes**
-   - Write clear, documented code
-   - Follow existing code style and conventions
-   - Add tests for new features
-   - Update documentation as needed
-
-5. **Test your changes**
+3. **Set up development environment**
    ```bash
-   ./gradlew test  # Java tests
-   cd docker/ml-service && pytest  # Python tests
+   # Install dependencies
+   ./gradlew build
+   
+   # Start services
+   docker-compose up -d postgres kafka ml-service
    ```
 
-6. **Commit and push**
+4. **Make changes and test**
+   ```bash
+   # Make changes in your IDE
+   
+   # Build and test
+   ./gradlew test
+   ./gradlew :vericrop-gui:run
+   ```
+
+5. **Commit and push**
    ```bash
    git add .
-   git commit -m "Add: Brief description of your changes"
+   git commit -m "feat: Brief description of changes"
    git push origin feature/your-feature-name
    ```
 
-7. **Open a Pull Request**
-   - Go to the original repository on GitHub
-   - Click "New Pull Request"
-   - Select your fork and branch
-   - Provide a clear description of your changes
+6. **Open a Pull Request**
+   - Navigate to GitHub and create a PR
+   - Provide clear description of changes
+   - Reference any related issues
 
-### Contribution Guidelines
+### Code Style
 
-- **Code Style**: Follow Java and Python best practices
-- **Testing**: All new features must include tests
-- **Documentation**: Update README and inline comments
-- **Commits**: Use clear, descriptive commit messages
-- **Issues**: Check existing issues before creating new ones
+- **Java**: Follow existing code style (Spring Boot conventions)
+- **Python**: PEP 8 style guide
+- **Commit Messages**: Use conventional commits format
+  - `feat:` New feature
+  - `fix:` Bug fix
+  - `docs:` Documentation changes
+  - `test:` Test additions/changes
+  - `refactor:` Code refactoring
 
-### Areas for Contribution
+### Testing Requirements
 
-- 🐛 Bug fixes and error handling improvements
-- ✨ New features and enhancements
-- 📝 Documentation improvements
-- 🧪 Additional test coverage
-- 🎨 UI/UX improvements
-- 🔒 Security enhancements
+- Add unit tests for new features
+- Ensure all tests pass before submitting PR
+- Include integration tests for service interactions
 
-**Note**: If this repository has a `CONTRIBUTING.md` file, please refer to it for detailed contribution guidelines.
+### Documentation
 
-## 📜 Code of Conduct
+- Update README.md if adding new features
+- Add inline comments for complex logic
+- Update module-specific READMEs (e.g., vericrop-gui/README.md)
 
-We are committed to providing a welcoming and inclusive experience for everyone. We expect all contributors to:
+### Code Review Process
 
-- Be respectful and considerate
-- Use inclusive language
-- Accept constructive feedback gracefully
-- Focus on what is best for the community
-- Show empathy towards other community members
+1. Automated tests must pass
+2. At least one maintainer approval required
+3. Address review comments
+4. Squash commits before merge (optional)
 
-**Note**: A formal Code of Conduct document is planned. In the meantime, please follow general open-source community standards and GitHub's Community Guidelines.
+## Troubleshooting
 
-**TODO**: Add link to `CODE_OF_CONDUCT.md` when available.
+Common issues and solutions.
 
-## 📄 License
+### Application won't start
 
-**TODO**: This project's license has not been specified yet. Please contact the maintainer for licensing information before using or distributing this software.
+**Symptom**: JavaFX GUI fails to launch
 
-Common options for consideration:
-- MIT License (permissive)
-- Apache 2.0 (permissive with patent grant)
-- GPL v3 (copyleft)
+**Solutions**:
+1. Check Java version: `java -version` (requires 11+, 17 recommended)
+2. Verify services are running: `docker-compose ps`
+3. Check logs: `./gradlew :vericrop-gui:run --info`
+4. Ensure `JAVA_HOME` is set correctly
 
-## 👥 Maintainers and Contact
+### Database connection failed
 
-### Project Owner
-- **GitHub**: [@imperfectperson-max](https://github.com/imperfectperson-max)
-- **Repository**: [vericrop-miniproject](https://github.com/imperfectperson-max/vericrop-miniproject)
+**Symptom**: `Connection refused` or `Authentication failed`
+
+**Solutions**:
+1. Verify PostgreSQL is running:
+   ```bash
+   docker-compose ps postgres
+   docker-compose logs postgres
+   ```
+2. Check connection settings in `.env`
+3. Test connection:
+   ```bash
+   docker exec -it vericrop-postgres psql -U vericrop -d vericrop
+   ```
+4. Reset PostgreSQL:
+   ```bash
+   docker-compose down -v
+   docker-compose up -d postgres
+   ```
+
+### Kafka connection failed
+
+**Symptom**: `TimeoutException` or `Node not available`
+
+**Solutions**:
+1. Verify Kafka is running:
+   ```bash
+   docker-compose ps kafka zookeeper
+   ```
+2. Check bootstrap servers in `.env`
+3. Disable Kafka for testing:
+   ```bash
+   export KAFKA_ENABLED=false
+   ./gradlew :vericrop-gui:run
+   ```
+4. Restart Kafka:
+   ```bash
+   docker-compose restart kafka zookeeper
+   ```
+
+### ML Service unavailable
+
+**Symptom**: `Connection refused` on port 8000
+
+**Solutions**:
+1. Verify ML service is running:
+   ```bash
+   curl http://localhost:8000/health
+   docker-compose logs ml-service
+   ```
+2. Enable demo mode:
+   ```bash
+   export VERICROP_LOAD_DEMO=true
+   docker-compose up -d ml-service
+   ```
+3. Rebuild ML service:
+   ```bash
+   docker-compose build ml-service
+   docker-compose up -d ml-service
+   ```
+
+### Build fails
+
+**Symptom**: Gradle build errors
+
+**Solutions**:
+1. Clean build:
+   ```bash
+   ./gradlew clean build
+   ```
+2. Clear Gradle cache:
+   ```bash
+   rm -rf ~/.gradle/caches
+   ./gradlew build --refresh-dependencies
+   ```
+3. Check Java version compatibility
+
+### Tests fail
+
+**Symptom**: Unit or integration tests fail
+
+**Solutions**:
+1. Run tests with verbose output:
+   ```bash
+   ./gradlew test --info
+   ```
+2. Check test dependencies are installed
+3. Ensure test database is accessible (for integration tests)
+4. Review test logs in `build/reports/tests/`
+
+### Port conflicts
+
+**Symptom**: `Address already in use`
+
+**Solutions**:
+1. Check which process is using the port:
+   ```bash
+   lsof -i :8080  # or :8000, :5432, :9092
+   ```
+2. Stop conflicting service or change port in `.env`
+3. Kill conflicting process:
+   ```bash
+   kill -9 <PID>
+   ```
+
+### Docker Compose issues
+
+**Symptom**: Services fail to start or are unhealthy
+
+**Solutions**:
+1. Check service logs:
+   ```bash
+   docker-compose logs <service-name>
+   ```
+2. Restart services:
+   ```bash
+   docker-compose restart <service-name>
+   ```
+3. Clean slate:
+   ```bash
+   docker-compose down -v
+   docker-compose up --build -d
+   ```
+4. Check disk space: `df -h`
+
+### Common Errors
+
+#### `JAVA_HOME not set`
+```bash
+# Linux/Mac
+export JAVA_HOME=/path/to/java
+# Windows
+set JAVA_HOME=C:\path\to\java
+```
+
+#### `Module not found` (JavaFX)
+```bash
+# Add JavaFX modules explicitly
+./gradlew :vericrop-gui:run --add-modules=javafx.controls,javafx.fxml
+```
+
+#### `Cannot connect to Docker daemon`
+```bash
+# Start Docker
+sudo systemctl start docker  # Linux
+# Or start Docker Desktop (Mac/Windows)
+```
 
 ### Getting Help
 
-- 🐛 **Bug Reports**: [Open an issue](https://github.com/imperfectperson-max/vericrop-miniproject/issues)
-- 💡 **Feature Requests**: [Open an issue](https://github.com/imperfectperson-max/vericrop-miniproject/issues) with the "enhancement" label
-- 💬 **Questions**: Use GitHub Discussions or contact the maintainer
+If you encounter issues not covered here:
 
-### Response Time
-We aim to respond to issues and pull requests within 48-72 hours. Please be patient as this is an educational project.
+1. Check existing [GitHub Issues](https://github.com/imperfectperson-max/vericrop-miniproject/issues)
+2. Review detailed documentation:
+   - [vericrop-gui/README.md](vericrop-gui/README.md) - GUI module details
+   - [KAFKA_INTEGRATION.md](KAFKA_INTEGRATION.md) - Kafka setup and usage
+   - [DEPLOYMENT.md](DEPLOYMENT.md) - Production deployment
+3. Open a new issue with:
+   - Clear description of the problem
+   - Steps to reproduce
+   - Error messages and logs
+   - Environment details (OS, Java version, Docker version)
 
-## 🙏 Acknowledgements
+## License
 
-### Datasets and Resources
-- **Fruits-360 Dataset**: Fruit image dataset for ML model training
-- **PlantVillage Dataset**: Plant disease and quality assessment datasets
+**TODO**: License to be determined. Please contact the maintainer for licensing information.
 
-### Technologies and Frameworks
-- **PyTorch/TensorFlow**: Machine learning frameworks
+## Maintainers
+
+- **GitHub**: [@imperfectperson-max](https://github.com/imperfectperson-max)
+- **Repository**: [vericrop-miniproject](https://github.com/imperfectperson-max/vericrop-miniproject)
+
+## Acknowledgements
+
+- **Fruits-360 Dataset**: ML model training data
+- **Apache Kafka**: Event streaming platform
 - **FastAPI**: Modern Python web framework
-- **JavaFX**: Rich client application platform
-- **ONNX**: Open Neural Network Exchange format
-
-### Inspiration
-This project was inspired by the need for transparency and quality assurance in agricultural supply chains, combining cutting-edge AI and blockchain technologies to create a trustworthy platform.
-
-### References
-- Transfer Learning with ResNet: [Deep Residual Learning](https://arxiv.org/abs/1512.03385)
-- Supply Chain Management: Best practices in agricultural logistics
-- Blockchain in Agriculture: Research papers on blockchain applications in food supply chains
+- **Spring Boot**: Java application framework
+- **JavaFX**: Desktop GUI framework
+- **ONNX Runtime**: Cross-platform ML inference
 
 ---
-
-## 📸 Screenshots and Media
-
-**TODO**: Add screenshots of the application dashboards and features here.
-
-### Adding Screenshots
-
-To add images to this README:
-
-1. Create a `/docs/images` directory in the repository
-2. Add your screenshots there
-3. Reference them in the README:
-
-```markdown
-![Dashboard Screenshot](docs/images/dashboard.png)
-```
-
-### Suggested Screenshots
-- [ ] Farm Management Dashboard
-- [ ] Logistics Tracking Interface
-- [ ] Consumer Verification Portal
-- [ ] Analytics Dashboard
-- [ ] QR Code Scanning Demo
-- [ ] Blockchain Transaction View
-
----
-
-## 🚧 Development Roadmap
-
-See [PROJECT_PLAN.md](PROJECT_PLAN.md) for the detailed development timeline and weekly plan.
-
----
-
-<div align="center">
 
 **Made with ❤️ for sustainable agriculture and transparent supply chains**
 
-[Report Bug](https://github.com/imperfectperson-max/vericrop-miniproject/issues) · [Request Feature](https://github.com/imperfectperson-max/vericrop-miniproject/issues) · [Contribute](https://github.com/imperfectperson-max/vericrop-miniproject/pulls)
-
-</div>
+[Report Bug](https://github.com/imperfectperson-max/vericrop-miniproject/issues) · [Request Feature](https://github.com/imperfectperson-max/vericrop-miniproject/issues) · [Documentation](https://github.com/imperfectperson-max/vericrop-miniproject)
